# libmx2

./: .clang-format  .gitignore  Doxyfile  README.md  about.html  compile-shaders.pl  compile.drop.pl  compile.pl  compile.sh  cross-compile.pl  mainpage.dox  run  run.pl
MX2_Project/: CMakeLists.txt  Makefile.em  Makefile.install  index.html  main.cpp
android/: Android.mk  CMakeLists.txt  README.md  cfg.cpp  cfg.hpp  config.h  exception.cpp  exception.hpp  explode.cpp  explode.hpp  font.cpp  font.hpp  game_objects.hpp  gl.cpp  gl.hpp  glm.txt  input.hpp  intro.cpp  intro.hpp  joystick.cpp  joystick.hpp  loadpng.cpp  loadpng.hpp  main.cpp  model.cpp  model.hpp  mx.cpp  mx.hpp  object.hpp  sound.cpp  sound.hpp  space.cpp  tee_stream.cpp  tee_stream.hpp  test.cpp  texture.cpp  texture.hpp  util.cpp  util.hpp  wrapper.hpp
cmd/: CMakeLists.txt  Makefile.em  README.md  ast.hpp  build_release.mxcmd  cmd.cpp  command.cpp  command.hpp  libcmdConfig.cmake.in  parser.hpp  scanner.cpp
cmd/console_shader_generator/: Makefile  gencode.console.cpp  input.txt  mx2-ollama.cpp  mx2-ollama.hpp
cmd/guide/: code.html  commands.html  control_flow.html  expressions.html  index.html
cmd/include/: ast.hpp  cmd_argz.hpp  command.hpp  command_reg.hpp  game_state.hpp  html.hpp  library.hpp  parser.hpp  plugin_api.h  plugin_output.hpp  scanner.hpp  string_buffer.hpp  types.hpp  version_info.hpp
cmd/ollama_gen/: mx2-ollama.cpp  mx2-ollama.hpp
cmd/scripts/: break_continue.command  count_all.command  count_all.mxcmd  error.command  extract.command  index.command  loop.command  rename.mxcmd  strcmp.mxcmd  test.command
cmd/site/: index.html
cmd/src/: ast.cpp  cmd.cpp  command.cpp  command_reg.cpp  console_full.cpp  html.cpp  page.cpp  scanner.cpp
libmx/: CMakeCache.txt  CMakeLists.txt  Makefile.am  Makefile.in  autogen.sh  build-macos-molten.sh  cmake_uninstall.cmake.in  config.h.in  config_autotools.h.in  configure.ac  exception.cpp  font.cpp  font.hpp  gl.cpp  gl.hpp  input.hpp  joystick.cpp  libmx.pc.in  libmx2Config.cmake.in  libmxgl.pc.in  libmxgl_cv.pc.in  libmxvk.pc.in  libmxvk_cv.pc.in  loadpng.cpp  util.cpp  util.hpp
libmx/asteroids/: CMakeLists.txt  Makefile.em  asteroids.cpp  game.cpp  game.hpp  gameover.hpp  intro.hpp
libmx/blocks/: CMakeLists.txt  Makefile.em  blocks.cpp
libmx/breakout/: CMakeLists.txt  Makefile.em  breakout.cpp  breakout_game.hpp  breakout_main.hpp
libmx/controller_test/: CMakeLists.txt  Makefile.em  main.cpp
libmx/cross/: CMakeLists.txt  mxcross.cpp  mxcross.hpp  skeleton.cpp  vk.cpp  vk.hpp
libmx/example/: CMakeLists.txt  Makefile.em  main.cpp
libmx/frogger/: CMakeLists.txt  Makefile.em  README.md  frogger.cpp
libmx/gl_about/: CMakeLists.txt  MX_app.html  Makefile.em  about.cpp  index.html
libmx/gl_animated_cube/: CMakeLists.txt  Makefile.em  example.cpp  example.html
libmx/gl_animation/: CMakeLists.txt  Makefile.em  animation.cpp  animation.hpp  index.html
libmx/gl_asteroids/: CMakeLists.txt  Makefile.em  README.md  asteroids.cpp  console.cpp  console.hpp  index.html
libmx/gl_blank_model/: CMakeLists.txt  Makefile.em  blank_model.cpp
libmx/gl_blend_shader/: CMakeLists.txt  Makefile.em  blend.cpp
libmx/gl_breakout/: CMakeLists.txt  Makefile.em  README.md  breakout.cpp  game.cpp  game.hpp  game_objects.hpp  intro.cpp  intro.hpp
libmx/gl_compute/: CMakeLists.txt  example.cpp
libmx/gl_compute_cv/: CMakeLists.txt  example.cpp
libmx/gl_console/: CMakeLists.txt  Makefile.em  console.cpp  console.hpp  console_main.cpp
libmx/gl_console_full/: CMakeLists.txt  Makefile.em  console_full.cpp
libmx/gl_console_skeleton/: CMakeLists.txt  Makefile.em  README.md  console_skeleton.cpp
libmx/gl_cube/: CMakeLists.txt  Makefile.em  README.md  example.cpp
libmx/gl_cubemap/: CMakeLists.txt  Makefile.em  README.md  example.cpp
libmx/gl_curve/: CMakeLists.txt  Makefile.em  curve.cpp
libmx/gl_cv_skeleton/: CMakeLists.txt  Makefile.em  skeleton.cpp
libmx/gl_es3/: CMakeLists.txt  skeleton.cpp
libmx/gl_example/: CMakeLists.txt  Makefile.em  README.md  example.cpp  tri.frag  tri.vert
libmx/gl_explode/: CMakeLists.txt  Makefile.em  README.md  explode.cpp  explode.hpp  test.cpp
libmx/gl_fire/: CMakeLists.txt  Makefile.em  README.md  fire.cpp
libmx/gl_fog/: CMakeLists.txt  Makefile.em  room.cpp
libmx/gl_framebuffer/: CMakeLists.txt  skeleton.cpp
libmx/gl_glitch/: CMakeLists.txt  Makefile.em  glitch.cpp
libmx/gl_glitch_cube/: CMakeLists.txt  glitch.cpp
libmx/gl_glitch_cube2/: CMakeLists.txt  Makefile.em  glitch.cpp
libmx/gl_glitch_cube3/: CMakeLists.txt  Makefile.em  glitch.cpp
libmx/gl_glitch_ex/: CMakeLists.txt  Makefile.em  README.md  model_glitch.cpp
libmx/gl_intro_screen/: CMakeLists.txt  Makefile.em  intro.cpp
libmx/gl_matrix/: CMakeLists.txt  Makefile.em  matrix.cpp
libmx/gl_matrix_glitch/: CMakeLists.txt  Makefile.em  README.md  matrix_glitch.cpp
libmx/gl_matrix_psyche/: CMakeLists.txt  Makefile.em  README.md  matrix_psyche.cpp
libmx/gl_matrix_room/: CMakeLists.txt  Makefile.em  README.md  matrix_room.cpp
libmx/gl_model_explode/: CMakeLists.txt  Makefile.em  model_explode.cpp
libmx/gl_model_glitch/: CMakeLists.txt  Makefile.em  model_glitch.cpp
libmx/gl_mxmod/: CMakeLists.txt  Makefile.em  README.md  example.cpp  viewer.cpp
libmx/gl_obj_explode/: CMakeLists.txt  Makefile.em  obj_explode.cpp
libmx/gl_object/: CMakeLists.txt  Makefile.em  skeleton.cpp  skeleton.html
libmx/gl_pong/: CMakeLists.txt  Makefile.em  README.md  pong.cpp
libmx/gl_ps/: CMakeLists.txt  Makefile.em  ps.cpp
libmx/gl_ps2/: CMakeLists.txt  Makefile.em  ps.cpp
libmx/gl_ps3/: CMakeLists.txt  Makefile.em  ps.cpp
libmx/gl_ps3d/: CMakeLists.txt  Makefile.em  ps.cpp
libmx/gl_ps4/: CMakeLists.txt  Makefile.em  ps.cpp
libmx/gl_pyramid/: CMakeLists.txt  Makefile.em  example.cpp
libmx/gl_rain/: CMakeLists.txt  Makefile.em  README.md  rain.cpp
libmx/gl_room/: CMakeLists.txt  Makefile.em  room.cpp
model_viewer/: CMakeLists.txt  README.md  main.cpp  model_view.cpp  model_view.hpp  model_viewer.pro  resources.qrc  stylesheet.qss
(+1004 files in other folders)
